Add project roadmap experience
